# model-forensics

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
config/: accelerate_fsdp.yaml  params.json
scripts/: check_3ep.sh  elicitation.sh  eval.sh  eval_both.sh  eval_qwen-3.6-27B.sh  eval_qwen-3.6-27B_thinking.sh  generate_data.sh  generate_data_both.sh  pull_elicitation.sh  run_3ep_pipeline.sh  temp.sh  train.sh  train_both.sh
src/: data.py  llm.py  plot.py  train.py
src/alignment-faking/: animal_welfare_queries.json  eval.py
src/infra/: modal_app.py
